# get-man

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Getman.desktop  icon.icns
src-tauri/src/: lib.rs
src/assets/: styles.css
src/components/: AppHeader.vue  CollectionItem.vue  EnvironmentPanel.vue  KeyValueEditor.vue  MethodSelect.vue  ProxyPanel.vue  RequestEditor.vue  ResponseViewer.vue  Sidebar.vue
src/stores/: db.js  store.js
src/utils/: highlight.js  http.js
